derniers ajustements css liste apparts

--- a/mockup/index.html
+++ b/mockup/index.html
@@ -23,7 +23,7 @@ and open the template in the editor.
                 </div>
 
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#"><span class="glyphicon glyphicon-home"></span> Appartements<span class="sr-only">(current)</span></a></li>
+                    <li class="active"><a href="#"> Appartements<span class="sr-only">(current)</span></a></li>
 
                 </ul>
 
@@ -34,14 +34,14 @@ and open the template in the editor.
                     <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
                 </form>
 
-                <button type="button" class="btn btn-default navbar-btn navbar-right">Se connecter</button>
+                <a class="btn btn-default navbar-btn navbar-right" href="signin.html">Se connecter</a>
             </div>
         </nav>
 
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-12 page-title">
-                    <h1><span class="glyphicon glyphicon-home"></span> Parcourir les appartements</h1>
+                    <h2><span class="glyphicon glyphicon-home"></span> Parcourir les appartements</h2>
                 </div>
             </div> 
             <div class="row">
@@ -323,7 +323,7 @@ and open the template in the editor.
         </div>
 
 
-        </div>
+     
 
 
         <script src="../lib/jquery-1.11.3.min.js"></script>
