ajoute sa propre url dans la navbar

--- a/mockup/index.html
+++ b/mockup/index.html
@@ -11,6 +11,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../lib/bootstrap-3.3/css/bootstrap.min.css" />
         <link rel="stylesheet" href="css/index.css" />
+        <link rel="stylesheet" href="css/nav.css" />
     </head>
     <body>
 
@@ -23,7 +24,7 @@ and open the template in the editor.
                 </div>
 
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#"> Appartements<span class="sr-only">(current)</span></a></li>
+                    <li class="active"><a href="index.html"> Appartements<span class="sr-only">(current)</span></a></li>
 
                 </ul>
 
