corrections de code et changement de répertoire

--- a/mockup/visiteur/index.html
+++ b/mockup/visiteur/index.html
@@ -6,12 +6,12 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>MIllenary 42 : appartements</title>
+        <title>Millenary 42 : appartements</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../lib/bootstrap-3.3/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="css/index.css" />
-        <link rel="stylesheet" href="css/nav.css" />
+        <link rel="stylesheet" href="../../lib/bootstrap-3.3/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="../css/index.css" />
+        <link rel="stylesheet" href="../css/nav.css" />
     </head>
     <body>
         <div class="container-fluid">
@@ -80,17 +80,17 @@ and open the template in the editor.
                                             </tr>
                                             <tr>
                                                 <td>
-                                                    Charges
+                                                    Type
                                                 </td>
                                                 <td>
-                                                    comprises
+                                                    Meublé vacances
                                                 </td>
                                             </tr>
                                         </table>
                                         <p>
                                             <!--<a href="#" class="btn btn-success" role="button"><span class="glyphicon glyphicon-check"></span> Poser une option</a> -->
                                             <span class="pull-right"></span>
-                                            <a href="#" class="btn btn-primary" role="button"><span class="glyphicon glyphicon-list-alt"></span> Détails</a>
+                                            <a href="details_appart.html" class="btn btn-primary" role="button"><span class="glyphicon glyphicon-list-alt"></span> Détails</a>
                                         </p>
                                     </div>
                                 </div>
@@ -122,19 +122,19 @@ and open the template in the editor.
                                                     600€
                                                 </td>
                                             </tr>
-                                            <tr>
+                                             <tr>
                                                 <td>
-                                                    Charges
+                                                    Type
                                                 </td>
                                                 <td>
-                                                    comprises
+                                                    Meublé vacances
                                                 </td>
                                             </tr>
                                         </table>
                                         <p>
                                             <!--<a href="#" class="btn btn-success" role="button"><span class="glyphicon glyphicon-check"></span> Poser une option</a> -->
                                             <span class="pull-right"></span>
-                                            <a href="#" class="btn btn-primary" role="button"><span class="glyphicon glyphicon-list-alt"></span> Détails</a>
+                                            <a href="details_appart.html" class="btn btn-primary" role="button"><span class="glyphicon glyphicon-list-alt"></span> Détails</a>
                                         </p>
                                     </div>
                                 </div>
@@ -166,19 +166,19 @@ and open the template in the editor.
                                                     600€
                                                 </td>
                                             </tr>
-                                            <tr>
+                                             <tr>
                                                 <td>
-                                                    Charges
+                                                    Type
                                                 </td>
                                                 <td>
-                                                    comprises
+                                                    Meublé vacances
                                                 </td>
                                             </tr>
                                         </table>
                                         <p>
                                             <!--<a href="#" class="btn btn-success" role="button"><span class="glyphicon glyphicon-check"></span> Poser une option</a> -->
                                             <span class="pull-right"></span>
-                                            <a href="#" class="btn btn-primary" role="button"><span class="glyphicon glyphicon-list-alt"></span> Détails</a>
+                                            <a href="details_appart.html" class="btn btn-primary" role="button"><span class="glyphicon glyphicon-list-alt"></span> Détails</a>
                                         </p>
                                     </div>
                                 </div>
@@ -210,19 +210,19 @@ and open the template in the editor.
                                                     600€
                                                 </td>
                                             </tr>
-                                            <tr>
+                                             <tr>
                                                 <td>
-                                                    Charges
+                                                    Type
                                                 </td>
                                                 <td>
-                                                    comprises
+                                                    Meublé vacances
                                                 </td>
                                             </tr>
                                         </table>
                                         <p>
                                             <!--<a href="#" class="btn btn-success" role="button"><span class="glyphicon glyphicon-check"></span> Poser une option</a> -->
                                             <span class="pull-right"></span>
-                                            <a href="#" class="btn btn-primary" role="button"><span class="glyphicon glyphicon-list-alt"></span> Détails</a>
+                                            <a href="details_appart.html" class="btn btn-primary" role="button"><span class="glyphicon glyphicon-list-alt"></span> Détails</a>
                                         </p>
                                     </div>
                                 </div>
@@ -254,19 +254,19 @@ and open the template in the editor.
                                                     600€
                                                 </td>
                                             </tr>
-                                            <tr>
+                                             <tr>
                                                 <td>
-                                                    Charges
+                                                    Type
                                                 </td>
                                                 <td>
-                                                    comprises
+                                                    Meublé vacances
                                                 </td>
                                             </tr>
                                         </table>
                                         <p>
                                             <!--<a href="#" class="btn btn-success" role="button"><span class="glyphicon glyphicon-check"></span> Poser une option</a> -->
                                             <span class="pull-right"></span>
-                                            <a href="#" class="btn btn-primary" role="button"><span class="glyphicon glyphicon-list-alt"></span> Détails</a>
+                                            <a href="details_appart.html" class="btn btn-primary" role="button"><span class="glyphicon glyphicon-list-alt"></span> Détails</a>
                                         </p>
                                     </div>
                                 </div>
@@ -300,17 +300,17 @@ and open the template in the editor.
                                             </tr>
                                             <tr>
                                                 <td>
-                                                    Charges
+                                                    Type
                                                 </td>
                                                 <td>
-                                                    comprises
+                                                    Meublé vacances
                                                 </td>
                                             </tr>
                                         </table>
                                         <p>
                                             <!--<a href="#" class="btn btn-success" role="button"><span class="glyphicon glyphicon-check"></span> Poser une option</a> -->
                                             <span class="pull-right"></span>
-                                            <a href="#" class="btn btn-primary" role="button"><span class="glyphicon glyphicon-list-alt"></span> Détails</a>
+                                            <a href="details_appart.html" class="btn btn-primary" role="button"><span class="glyphicon glyphicon-list-alt"></span> Détails</a>
                                         </p>
                                     </div>
                                 </div>
@@ -327,7 +327,7 @@ and open the template in the editor.
 
 
 
-        <script src="../lib/jquery-1.11.3.min.js"></script>
-        <script src="../lib/bootstrap-3.3/js/bootstrap.min.js"></script>
+        <script src="../../lib/jquery-1.11.3.min.js"></script>
+        <script src="../../lib/bootstrap-3.3/js/bootstrap.min.js"></script>
     </body>
 </html>
