--- a/mockup/visiteur/signin.html
+++ b/mockup/visiteur/signin.html
@@ -2,12 +2,12 @@
 
 <html>
     <head>
-        <title>MIllenary 42 : appartements</title>
+        <title>Millenary 42 : connexion</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../lib/bootstrap-3.3/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="css/signin.css" />
-        <link rel="stylesheet" href="css/nav.css" />
+        <link rel="stylesheet" href="../../lib/bootstrap-3.3/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="../css/signin.css" />
+        <link rel="stylesheet" href="../css/nav.css" />
     </head>
     <body>
 
@@ -163,7 +163,7 @@
         </div>
 
 
-        <script src="../lib/jquery-1.11.3.min.js"></script>
-        <script src="../lib/bootstrap-3.3/js/bootstrap.min.js"></script>
+        <script src="../../lib/jquery-1.11.3.min.js"></script>
+        <script src="../../lib/bootstrap-3.3/js/bootstrap.min.js"></script>
     </body>
 </html>
