--- a/mockup/visiteur/signin.html
+++ b/mockup/visiteur/signin.html
@@ -26,13 +26,6 @@
 
                     </ul>
 
-                    <form class="navbar-form navbar-left" role="search">
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Rechercher">
-                        </div>
-                        <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
-                    </form>
-
                 </div>
             </nav>
 
@@ -59,21 +52,21 @@
                     <form class="form-horizontal">
 
                         <div class="form-group">
-                            <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+                            <label for="signin-email" class="col-sm-2 control-label">Email</label>
                             <div class="col-sm-4">
-                                <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                                <input type="email" class="form-control" id="signin-email" placeholder="Email">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="inputPassword3" class="col-sm-2 control-label">Mot de passe</label>
+                            <label for="signin-password" class="col-sm-2 control-label">Mot de passe</label>
                             <div class="col-sm-4">
-                                <input type="password" class="form-control" id="inputPassword3" placeholder="Mot de passe">
+                                <input type="password" class="form-control" id="signin-password" placeholder="Mot de passe">
                             </div>
                         </div>
 
                         <div class="form-group">
                             <div class="col-sm-offset-2 col-sm-4">
-                                <button type="submit" class="btn btn-primary pull-right">Se connecter</button>
+                                <a onclick="alert('signin');" class="btn btn-primary pull-right">Se connecter</a>
                             </div>
                         </div>
                     </form>
@@ -86,73 +79,73 @@
                         <h4>Informations</h4>
                         <hr>
                         <div class="form-group">
-                            <label for="nom" class="col-sm-2 control-label">Nom</label>
+                            <label for="signup-name" class="col-sm-2 control-label">Nom</label>
                             <div class="col-sm-4">
-                                <input type="text" class="form-control" id="nom" placeholder="Nom">
+                                <input type="text" class="form-control" id="signup-name" placeholder="Nom">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="prenom" class="col-sm-2 control-label">Prénom</label>
+                            <label for="signup-fname" class="col-sm-2 control-label">Prénom</label>
                             <div class="col-sm-4">
-                                <input type="text" class="form-control" id="prenom" placeholder="Prénom">
+                                <input type="text" class="form-control" id="signup-fname" placeholder="Prénom">
                             </div>
                         </div> 
                         <div class="form-group">
-                            <label for="inputEmail" class="col-sm-2 control-label">Email</label>
+                            <label for="signup-email" class="col-sm-2 control-label">Email</label>
                             <div class="col-sm-4">
-                                <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+                                <input type="email" class="form-control" id="signup-email" placeholder="Email">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="telephone" class="col-sm-2 control-label">Téléhone</label>
+                            <label for="signup-phone" class="col-sm-2 control-label">Téléhone</label>
                             <div class="col-sm-4">
-                                <input type="text" class="form-control" id="telephone" placeholder="Tuméro de téléphone">
+                                <input type="text" class="form-control" id="signup-phone" placeholder="Numéro de téléphone">
                             </div>
                         </div>
                         <h4>Adresse</h4>
                         <hr>
                         <div class="form-group">
-                            <label for="numeroRue" class="col-sm-2 control-label">Numéro</label>
+                            <label for="signup-number" class="col-sm-2 control-label">Numéro</label>
                             <div class="col-sm-4">
-                                <input type="text" class="form-control" id="numeroRue" placeholder="Numéro de rue">
+                                <input type="text" class="form-control" id="signup-number" placeholder="Numéro de rue">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="rue" class="col-sm-2 control-label">Rue</label>
+                            <label for="signup-street" class="col-sm-2 control-label">Rue</label>
                             <div class="col-sm-4">
-                                <input type="text" class="form-control" id="rue" placeholder="Rue">
+                                <input type="text" class="form-control" id="signup-street" placeholder="Rue">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="cp" class="col-sm-2 control-label">Code postal</label>
+                            <label for="signup-cp" class="col-sm-2 control-label">Code postal</label>
                             <div class="col-sm-4">
-                                <input type="text" class="form-control" id="cp" placeholder="Code postal">
+                                <input type="text" class="form-control" id="signup-cp" placeholder="Code postal">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="ville" class="col-sm-2 control-label">Ville</label>
+                            <label for="signup-town" class="col-sm-2 control-label">Ville</label>
                             <div class="col-sm-4">
-                                <input type="text" class="form-control" id="ville" placeholder="Ville">
+                                <input type="text" class="form-control" id="signup-town" placeholder="Ville">
                             </div>
                         </div>
                         <h4>Compte</h4>
                         <hr>
                         <div class="form-group">
-                            <label for="inputPassword" class="col-sm-2 control-label">Mot de passe</label>
+                            <label for="signup-password" class="col-sm-2 control-label">Mot de passe</label>
                             <div class="col-sm-4">
-                                <input type="password" class="form-control" id="inputPassword" placeholder="Mot de passe">
+                                <input type="password" class="form-control" id="signup-password" placeholder="Mot de passe">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="inputPassword2" class="col-sm-2 control-label">Confirmer mot de passe</label>
+                            <label for="signup-passconf" class="col-sm-2 control-label">Confirmer mot de passe</label>
                             <div class="col-sm-4">
-                                <input type="password" class="form-control" id="inputPassword2" placeholder="Confirmer mot de passe">
+                                <input type="password" class="form-control" id="signup-passconf" placeholder="Confirmer mot de passe">
                             </div>
                         </div>
 
                         <div class="form-group">
                             <div class="col-sm-offset-2 col-sm-4">
-                                <button type="submit" class="btn btn-success pull-right"><span class="glyphicon glyphicon-ok"></span> Inscription</button>
+                                <a onclick="alert('signup');" class="btn btn-success pull-right"><span class="glyphicon glyphicon-ok"></span> Inscription</a>
                             </div>
                         </div>
                     </form>
