--- a/mockup/visiteur/index.html
+++ b/mockup/visiteur/index.html
@@ -42,7 +42,7 @@ and open the template in the editor.
                 <div class="col-sm-12 page-content">
 
                     <div class=" col-sm-12">
-                        <div class="col-sm-1" style="position:fixed;">
+                        <div class="col-sm-1 filters" >
 
                             <form>
 
