lien entre visiteur et utilisateur connecté

--- a/mockup/visiteur/signin.html
+++ b/mockup/visiteur/signin.html
@@ -66,7 +66,7 @@
 
                         <div class="form-group">
                             <div class="col-sm-offset-2 col-sm-4">
-                                <a onclick="alert('signin');" class="btn btn-primary pull-right">Se connecter</a>
+                                <a href="../connected_user/index.html" class="btn btn-primary pull-right">Se connecter</a>
                             </div>
                         </div>
                     </form>
