--- a/mockup/employé/index.html
+++ b/mockup/employé/index.html
@@ -25,7 +25,7 @@ and open the template in the editor.
 
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="index.html"> Tableau de bord<span class="sr-only">(current)</span></a></li>
-                        <li><a href=" "> Appartements</a></li> <!-- Liste de tous les apparts sous forme de tableau sur la page d'après -->
+                        <li><a href="apparts.html"> Appartements</a></li> <!-- Liste de tous les apparts sous forme de tableau sur la page d'après -->
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
