flemme de donner un nom

--- a/mockup/employé/details_appart.html
+++ b/mockup/employé/details_appart.html
@@ -26,6 +26,7 @@ and open the template in the editor.
                     <ul class="nav navbar-nav">
                         <li ><a href="index.html"> Tableau de bord</a></li>
                         <li class="active"><a href="apparts"> Appartements<span class="sr-only">(current)</span></a></li> <!-- Liste de tous les apparts sous forme de tableau sur la page d'après -->
+                        <li ><a href="users.html"> Gestion des utilisateurs</a></li>
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
