--- a/mockup/locataire/mes_apparts.html
+++ b/mockup/locataire/mes_apparts.html
@@ -106,21 +106,23 @@ and open the template in the editor.
                                         <td>Meublé vacances</td>
                                         <td>05 Janvier 2016</td>
                                         <td>
+                                            <!-- Lien vers une page de paiement -->
                                             <a class="btn btn-sm btn-primary">
                                                 Payer le loyer
                                             </a>
                                         </td>
                                         <td>
+                                            <!-- liens vers des pages -->
                                             <div class="btn-group" role="group">
-                                                <button type="button" class="btn btn-default btn-sm" data-toggle="tooltip" data-placement="top" title="Quitance de loyer">
+                                                <a href="#" class="btn btn-default btn-sm" data-toggle="tooltip" data-placement="top" title="Quitance de loyer">
                                                     <span class="glyphicon glyphicon-eur"></span>
-                                                </button>
-                                                <button type="button" class="btn btn-default btn-sm" data-toggle="tooltip" data-placement="top" title="Signaler de la maintenance">
+                                                </a>
+                                                <a  class="btn btn-default btn-sm" data-toggle="tooltip" data-placement="top" title="Signaler de la maintenance">
                                                     <span class="glyphicon glyphicon-wrench"></span>
-                                                </button>
-                                                <button type="button" class="btn btn-default btn-sm" data-toggle="tooltip" data-placement="top" title="Documents demandés">
+                                                </a>
+                                                <a class="btn btn-default btn-sm" data-toggle="tooltip" data-placement="top" title="Documents demandés">
                                                     <span class="glyphicon glyphicon-file"></span>
-                                                </button>
+                                                </a>
                                             </div>
                                         </td>
                                     </tr>
@@ -134,16 +136,17 @@ and open the template in the editor.
                                             </a>
                                         </td>
                                         <td>
+                                            <!-- liens vers des pages -->
                                             <div class="btn-group" role="group">
-                                                <button type="button" class="btn btn-default btn-sm" data-toggle="tooltip" data-placement="top" title="Quitance de loyer">
+                                                <a href="#" class="btn btn-default btn-sm" data-toggle="tooltip" data-placement="top" title="Quitance de loyer">
                                                     <span class="glyphicon glyphicon-eur"></span>
-                                                </button>
-                                                <button type="button" class="btn btn-default btn-sm" data-toggle="tooltip" data-placement="top" title="Signaler de la maintenance">
+                                                </a>
+                                                <a  class="btn btn-default btn-sm" data-toggle="tooltip" data-placement="top" title="Signaler de la maintenance">
                                                     <span class="glyphicon glyphicon-wrench"></span>
-                                                </button>
-                                                <button type="button" class="btn btn-default btn-sm" data-toggle="tooltip" data-placement="top" title="Documents demandés">
+                                                </a>
+                                                <a class="btn btn-default btn-sm" data-toggle="tooltip" data-placement="top" title="Documents demandés">
                                                     <span class="glyphicon glyphicon-file"></span>
-                                                </button>
+                                                </a>
                                             </div>
                                         </td>
                                     </tr>
@@ -157,16 +160,17 @@ and open the template in the editor.
                                             </a>
                                         </td>
                                         <td>
+                                            <!-- liens vers des pages -->
                                             <div class="btn-group" role="group">
-                                                <button type="button" class="btn btn-default btn-sm" data-toggle="tooltip" data-placement="top" title="Quitance de loyer">
+                                                <a href="#" class="btn btn-default btn-sm" data-toggle="tooltip" data-placement="top" title="Quitance de loyer">
                                                     <span class="glyphicon glyphicon-eur"></span>
-                                                </button>
-                                                <button type="button" class="btn btn-default btn-sm" data-toggle="tooltip" data-placement="top" title="Signaler de la maintenance">
+                                                </a>
+                                                <a  class="btn btn-default btn-sm" data-toggle="tooltip" data-placement="top" title="Signaler de la maintenance">
                                                     <span class="glyphicon glyphicon-wrench"></span>
-                                                </button>
-                                                <button type="button" class="btn btn-default btn-sm" data-toggle="tooltip" data-placement="top" title="Documents demandés">
+                                                </a>
+                                                <a class="btn btn-default btn-sm" data-toggle="tooltip" data-placement="top" title="Documents demandés">
                                                     <span class="glyphicon glyphicon-file"></span>
-                                                </button>
+                                                </a>
                                             </div>
                                         </td>
                                     </tr>
