--- a/mockup/employé/index.html
+++ b/mockup/employé/index.html
@@ -26,6 +26,7 @@ and open the template in the editor.
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="index.html"> Tableau de bord<span class="sr-only">(current)</span></a></li>
                         <li><a href="apparts.html"> Appartements</a></li> <!-- Liste de tous les apparts sous forme de tableau sur la page d'après -->
+                        <li ><a href="users.html"> Gestion des utilisateurs</a></li>
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
@@ -52,7 +53,7 @@ and open the template in the editor.
                 <div class="col-sm-12 page-content">
 
                     <div class=" col-sm-6">
-                        <h3>Paiements en reyard</h3>
+                        <h3>Paiements en retard</h3>
                         <hr>
                         <table class="table table-striped">
                             <!-- header du tableau -->
